feat: add Ollama local LLM support + fix 12 monorepo issues
- Add pluggable LLM provider abstraction (Gemini, Ollama, heuristic fallback)
- Add Ollama container to docker-compose with optional profile
- Fix Kafka init script quoting, ingestion health endpoint security,
  JWT auth filter mismatch, CORS hardcoding, default API key leak,
  MetricsController placeholders, DTO validation conflict,
  zjsonpatch fromValue, dashboard credential leak, website-test errors
- Add comprehensive Ollama setup documentation

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>